-I'm thinking of moving to pyqt6 soon (this will fix EPySeg's embedded help/markdown)
-started adding unittests to make the code and development more robust (this is work in progress and will take a lot of time...)
-added support for opening image www and/or local url (for tif related images, was already working for other types of images)

15/06/2022
-added several new methods to the Img class (a full rewrite/reorganization would be useful some day) (e.g. save_as_tiff, one_hot_encoder, auto_scale, fill_holes, clean_blobs_below, ...)

25/04/2022
-replaced np.bool and np.float by bool and float, due to a numpy change (also reported by J. Müller on Github)
-allowed support for python 3.8

25/01/2022
-fixed a huge bug (affecting all non square images for detection of neighbors)

24/08/2021
-added a fully functional minimal version of Tissue Analyzer to EPySeg (allows for cell tracking and cell property measurement in 2D and 3D)

03/05/2021
-added support for various tracking algorithms (not public yet...)

29/04/2021
-added support for macros to ease the use of the tool on Google Colab (not public yet...)

26/04/2021
-added a minimal user interface for users that just want to use the pre-trained models (this interface is minimal and will by default use the default/most often the optimal parameters for the models). The idea is to further simplify the tool.

12-16/04/2021
-fixed several GeneratorExit errors thanks to https://stackoverflow.com/questions/46542147/elegant-way-for-breaking-a-generator-loop-generatorexit-error
-fixed several issues with multiple input models/metagenerators (not public yet)
-changed 'Remove border pixels' in outputs so that it now pads symmetric instead of setting pixels to black...
-adding some mathematical morphology operations in tensorflow (not public yet) (I will mostly use that to create modules to simplify things)

09/04/2021
-started adding support for pytorch models (not public yet)